# agentkit-samples

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
02-use-cases/smart_car_selector/: .env.example  ENV.md  README.md  README_en.md  agent.py  agentkit-agent.py  instruction.md  project.toml  pyproject.toml  requirements.txt  utils.py
02-use-cases/smart_car_selector/skills/dice-roller/: SKILL.md  roll.py
python/02-use-cases/ai_movie_studio/: .env.example  README.md  README_en.md  agent.py  config.yaml.example  project.toml  pyproject.toml  requirements.txt
python/02-use-cases/ai_movie_studio/knowledge/: prompt_templates.txt
python/02-use-cases/ai_movie_studio/scripts/: generate_diagrams.py  prepare_submission.py  sync_envs.py
python/02-use-cases/ai_movie_studio/skills/dice-roller/: SKILL.md
python/02-use-cases/ai_movie_studio/skills/evaluate-shots/: SKILL.md  evaluate.py
python/02-use-cases/ai_movie_studio/sub_agents/critic/: .env.example  README.md  agent.py  instruction.md  requirements.txt  simple_agent.py  utils.py
python/02-use-cases/ai_movie_studio/sub_agents/director/: .env.example  agent.py  instruction.md  simple_agent.py
python/02-use-cases/ai_movie_studio/sub_agents/producer/: .env.example  agent.py  feishu_bot.py  instruction.md  requirements.txt  simple_agent.py  utils.py
python/02-use-cases/ai_movie_studio/sub_agents/screenwriter/: .env.example  agent.py  instruction.md  requirements.txt  simple_agent.py
samples_check/: check_usecases.py
skills/byted-kickart-viral-replicator/: SKILL.md  pyproject.toml
skills/byted-kickart-viral-replicator/references/: 任务查询指南.md  创意分析指南.md  爆款裂变指南.md  素材上传指南.md  素材分析指南.md  视频参考指南.md
skills/byted-kickart-viral-replicator/scripts/: avatar.py  creative.py  material.py  plan.py  query.py  refer.py  replication.py  upgrade.py  upload.py
skills/byted-kickart-viral-replicator/scripts/core/: __init__.py
skills/byted-kickart-viral-replicator/scripts/core/utils/: downloader.py  extractor.py  matriel.py  validator.py
(+478 files in other folders)
